# REV_SEO

./: .env  .env.example  README.md  config.py  dashboard.py  database.py  diagnostic_wp.py  gemini_client.py  main.py  pyproject.toml  replit.md  requirements.txt  seo_dashboard.db  seo_optimizer.py  tmdb_client.py  wordpress_client.py
attached_assets/: Pasted-OBJETIVO-DO-PROJETO-Preciso-que-voc-me-ajude-a-criar-um-sistema-em-Python-chamado-WordPress-SEO-Opt-1753968844568_1753968844569.txt  Pasted-Prompt-Otimizado-Jornalista-SEO-para-Cultura-Pop-Google-News-Voc-um-jornalista-digital-espec-1753969375456_1753969375456.txt
static/: script.js  style.css
templates/: dashboard.html
